# Smart-Retail-Intelligence-System

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: dashboard.py
docs/: deployment.md  module_01_data_ingestion.md  module_02_eda.md  module_03_customer_segmentation.md  module_04_purchase_prediction.md  module_05_shap_explainability.md  module_06_dashboard_deployment.md  resume_showcase.md
models/: purchase_model.joblib
reports/eda/: country_revenue.csv  kpis.csv  monthly_revenue.csv  top_products.csv
reports/modeling/: customer_propensity.csv  model_evaluation.csv  shap_global_importance.csv  shap_local_contributions.csv  training_snapshots.csv
reports/segmentation/: cluster_evaluation.csv  customer_segments.csv  rfm_features.csv  segment_profiles.csv
scripts/: run_eda.py  run_segmentation.py  train_purchase_model.py
src/smart_retail/: __init__.py  data.py  eda.py  explainability.py  modeling.py  segmentation.py
src/smart_retail_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data.py  test_eda.py  test_modeling.py  test_segmentation.py
