[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-retail-intelligence"
version = "0.1.0"
description = "Production-oriented customer intelligence and purchase prediction."
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.3",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.1",
    "plotly>=5.18",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
